Avoid Map.copyOf's per-process salted iteration order in computeAllBinaryArcConstraints
Map.copyOf builds one of the JDK's small immutable collections
(java.util.ImmutableCollections), which since JDK 9 randomizes its internal
hash-bucket layout with a salt derived from System.nanoTime() at JVM
startup -- fixed within one process, different every launch. Arc's own
hashCode is fully deterministic (composes Variable's, which for
Variable.Impl is just String.hashCode()), so this map's key ordering would
otherwise be deterministic too. Map.copyOf's salt was the only reason
AC3's initial arc-processing queue (built directly from this map's
keySet()) varied launch-to-launch despite always reaching the same
arc-consistent fixpoint (AC3 is confluent) -- a pure noise source, not a
correctness issue, and a different randomness axis from the one
RestartRandomization already addresses (DomWdegLubySearch's own tie-break
random).

Replaced with Collections.unmodifiableMap, a non-copying wrapper with no
such salting. Verified via 4 separate `java` process launches of
MagicSquare-6-mdd (a restart-free instance): Statistics now byte-identical
across all four, where they previously varied. A restart-heavy instance
(LangfordBin-08) still shows residual cross-launch variance after this fix
-- ConstraintGraph's own `neighbours` map (Set.copyOf/Map.copyOf) and
computeAllBinaryConstraints's Collectors.toUnmodifiableSet() are the same
pattern, not yet addressed here.

Corpus-verified via Xcsp3CompetitionRunner: identical per-instance
solved/unknown classification before and after (comp_run5 vs comp_run6).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RHSxjQ811W5RfS1unrxqVj